--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
     "@tensorflow/tfjs": "^4.2.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "canvas": "^2.11.0",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "clsx": "^1.2.1",
     "face-api.js": "^0.22.2",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "sass": "^1.59.3",
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@next/eslint-plugin-next": "^13.2.4",
+    "@svgr/webpack": "^6.5.1",
+    "@typescript-eslint/parser": "^5.56.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.6",
+    "tailwindcss": "^3.2.7"
   }
 }
