--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@components/*": ["components/*"],
+      "@contexts/*": ["contexts/*"],
+      "@models/*": ["models/*"],
+      "@styles/*": ["src/styles/*"],
+      "@services/*": ["pages/api/services/*"],
+      "@libs": ["libs/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
