--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "clsx": "^1.2.1",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.59.3",
+    "sequelize": "^6.29.3",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
@@ -39,6 +41,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
+    "next-connect": "^0.13.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "tailwindcss": "^3.2.7"
