--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.4",
     "@mantine/hooks": "^6.0.4",
     "@mantine/next": "^6.0.4",
+    "@mantine/notifications": "^6.0.7",
     "@tabler/icons-react": "^2.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@tensorflow/tfjs": "^4.2.0",
