--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.59.3",
     "sequelize": "^6.29.3",
+    "sharp": "^0.32.0",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
