--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,16 +2,59 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true,
-      "tsx": true
-    }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
+  "extends": [
+    "eslint:recommended",
+    "prettier",
+    "plugin:@next/next/recommended"
+  ],
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "plugins": ["react", "react-hooks"],
   "rules": {
-    "no-unused-vars": "warn",
-    "react/jsx-sort-props": [1, { "ignoreCase": true }]
-  },
-  "extends": ["eslint:recommended", "next", "prettier"]
+    "no-console": "off",
+    "no-async-promise-executor": "off",
+    "require-yield": "off",
+    "no-unused-vars": "off",
+    "react/jsx-sort-props": "warn",
+    "react-hooks/rules-of-hooks": "warn",
+    "react-hooks/exhaustive-deps": "warn",
+    "object-curly-newline": [
+      "warn",
+      {
+        "ObjectExpression": { "multiline": true, "consistent": true },
+        "ObjectPattern": { "multiline": true, "consistent": true },
+        "ImportDeclaration": { "multiline": true, "consistent": true },
+        "ExportDeclaration": { "multiline": true, "consistent": true }
+      }
+    ],
+    "object-curly-spacing": ["error", "always"],
+    "object-property-newline": [
+      "error",
+      {
+        "allowAllPropertiesOnSameLine": true
+      }
+    ],
+    "operator-linebreak": [
+      1,
+      "before",
+      {
+        "overrides": {
+          "=": "after"
+        }
+      }
+    ],
+    "quote-props": [
+      "error",
+      "as-needed",
+      {
+        "unnecessary": true,
+        "numbers": false
+      }
+    ]
+  }
 }
