--- a/package.json
+++ b/package.json
@@ -9,44 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
+    "@emotion/react": "^11.10.8",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^6.0.4",
-    "@mantine/hooks": "^6.0.4",
-    "@mantine/next": "^6.0.4",
-    "@mantine/notifications": "^6.0.7",
-    "@tabler/icons-react": "^2.11.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@tensorflow/tfjs": "^4.2.0",
-    "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "canvas": "^2.11.0",
+    "@mantine/core": "^6.0.9",
+    "@mantine/hooks": "^6.0.9",
+    "@mantine/next": "^6.0.9",
+    "@mantine/notifications": "^6.0.9",
+    "@tabler/icons-react": "^2.17.0",
+    "@tanstack/react-query": "^4.29.5",
+    "@tensorflow/tfjs": "^4.4.0",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
-    "mysql2": "^3.2.0",
+    "mysql2": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.59.3",
-    "sequelize": "^6.29.3",
-    "sharp": "^0.32.0",
-    "typescript": "5.0.2",
-    "yup": "^1.0.2"
+    "sass": "^1.62.1",
+    "sequelize": "^6.31.0",
+    "sharp": "^0.32.1",
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.2.4",
-    "@svgr/webpack": "^6.5.1",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@next/eslint-plugin-next": "^13.3.2",
+    "@svgr/webpack": "^7.0.0",
+    "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.3.0",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.2",
     "eslint-config-prettier": "^8.8.0",
-    "next": "13.3.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "next": "13.3.2",
     "next-connect": "^0.13.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
