--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "face-recognition",
+  "name": "attendance",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,6 +29,7 @@
     "mysql2": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-webcam": "^7.0.1",
     "sass": "^1.62.1",
     "sequelize": "^6.31.0",
     "sharp": "^0.32.1",
@@ -49,6 +50,7 @@
     "next-connect": "^0.13.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
