--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.8",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^6.0.9",
+    "@mantine/dates": "^6.0.9",
     "@mantine/hooks": "^6.0.9",
     "@mantine/next": "^6.0.9",
     "@mantine/notifications": "^6.0.9",
@@ -24,6 +25,7 @@
     "axios": "^1.4.0",
     "canvas": "^2.11.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.8",
     "face-api.js": "^0.22.2",
     "formik": "^2.2.9",
     "mysql2": "^3.2.4",
@@ -34,11 +36,14 @@
     "sequelize": "^6.31.0",
     "sharp": "^0.32.1",
     "typescript": "5.0.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.1.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.2",
     "@svgr/webpack": "^7.0.0",
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.39.0",
@@ -46,11 +51,13 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "multer": "1.4.5-lts.1",
     "next": "13.3.2",
     "next-connect": "^0.13.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "uuid": "^9.0.0"
   }
 }
