--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,59 +1,59 @@
 {
-  "root": true,
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "extends": ["prettier", "plugin:@next/next/recommended"],
-  "env": {
-    "es2021": true,
-    "browser": true,
-    "node": true
-  },
-  "plugins": ["react", "react-hooks"],
-  "rules": {
-    "no-console": "off",
-    "no-async-promise-executor": "off",
-    "require-yield": "off",
-    "no-unused-vars": "off",
-    "react/jsx-indent": ["warn", 2],
-    "react/jsx-indent-props": ["warn", 2],
-    "react/jsx-sort-props": "warn",
-    "react-hooks/rules-of-hooks": "warn",
-    "react-hooks/exhaustive-deps": "warn",
-    "object-curly-newline": [
-      "warn",
-      {
-        "ObjectExpression": { "multiline": true, "consistent": true },
-        "ObjectPattern": { "multiline": true, "consistent": true },
-        "ImportDeclaration": { "multiline": true, "consistent": true },
-        "ExportDeclaration": { "multiline": true, "consistent": true }
-      }
-    ],
-    "object-curly-spacing": ["error", "always"],
-    "object-property-newline": [
-      "error",
-      {
-        "allowAllPropertiesOnSameLine": true
-      }
-    ],
-    "operator-linebreak": [
-      1,
-      "before",
-      {
-        "overrides": {
-          "=": "after"
-        }
-      }
-    ],
-    "quote-props": [
-      "error",
-      "as-needed",
-      {
-        "unnecessary": true,
-        "numbers": false
-      }
-    ]
-  }
+  // "root": true,
+  // "parser": "@typescript-eslint/parser",
+  // "parserOptions": {
+  //   "ecmaVersion": "latest",
+  //   "sourceType": "module"
+  // },
+  "extends": ["next/core-web-vitals"]
+  // "env": {
+  //   "es2021": true,
+  //   "browser": true,
+  //   "node": true
+  // },
+  // "plugins": ["react", "react-hooks"],
+  // "rules": {
+  //   "no-console": "off",
+  //   "no-async-promise-executor": "off",
+  //   "require-yield": "off",
+  //   "no-unused-vars": "off",
+  //   "react/jsx-indent": ["warn", 2],
+  //   "react/jsx-indent-props": ["warn", 2],
+  //   "react/jsx-sort-props": "warn",
+  //   "react-hooks/rules-of-hooks": "warn",
+  //   "react-hooks/exhaustive-deps": "warn",
+  //   "object-curly-newline": [
+  //     "warn",
+  //     {
+  //       "ObjectExpression": { "multiline": true, "consistent": true },
+  //       "ObjectPattern": { "multiline": true, "consistent": true },
+  //       "ImportDeclaration": { "multiline": true, "consistent": true },
+  //       "ExportDeclaration": { "multiline": true, "consistent": true }
+  //     }
+  //   ],
+  //   "object-curly-spacing": ["error", "always"],
+  //   "object-property-newline": [
+  //     "error",
+  //     {
+  //       "allowAllPropertiesOnSameLine": true
+  //     }
+  //   ],
+  //   "operator-linebreak": [
+  //     1,
+  //     "before",
+  //     {
+  //       "overrides": {
+  //         "=": "after"
+  //       }
+  //     }
+  //   ],
+  //   "quote-props": [
+  //     "error",
+  //     "as-needed",
+  //     {
+  //       "unnecessary": true,
+  //       "numbers": false
+  //     }
+  //   ]
+  // }
 }
